# FinalLabDraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  peers.txt  vcpkg.json
assets/scenes/: basic.json  cube_room.json  flock.json  flock_big.json  mixed_pile.json  spawn.json  tower.json
cmake/: FlatBuffers.cmake
report/: architecture.md  physics.md
schema/: scene.fbs
shaders/: boids.comp  instance.frag  instance.vert
src/: main.cpp
src/core/: fly_camera.cpp  fly_camera.hpp  window.cpp  window.hpp
src/net/: network_runtime.cpp  network_runtime.hpp  peer_config.cpp  peer_config.hpp  protocol.hpp
src/physics/: collision.cpp  collision.hpp  contact.hpp  flocking.cpp  flocking.hpp  physics_world.cpp  physics_world.hpp  spatial_index.cpp  spatial_index.hpp  spawner.cpp  spawner.hpp
src/render/: buffer.cpp  buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  imgui_layer.cpp  imgui_layer.hpp  instance_renderer.cpp  instance_renderer.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  vulkan_context.cpp  vulkan_context.hpp
src/scene/: animation.cpp  animation.hpp  scene_loader.cpp  scene_loader.hpp  scene_types.hpp
src/sim/: sim_runtime.cpp  sim_runtime.hpp
